fix: wrong margin lol

--- a/src/components/styles/Application/ServerSidebar.module.scss
+++ b/src/components/styles/Application/ServerSidebar.module.scss
@@ -100,7 +100,7 @@
           display: flex;
           align-items: center;
           & > .button {
-            margin-top: 4px;
+            margin-top: 8px;
           }
           & > .head {
             width: 100%;
